- Inkludierende Zeile wieder eingefügt - Ratespiel

--- a/gluon-polygon-matcher/Makefile
+++ b/gluon-polygon-matcher/Makefile
@@ -3,6 +3,8 @@ PKG_VERSION:=0.0.1
 
 PKG_BUILD_DIR := $(BUILD_DIR)/$(PKG_NAME)
 
+include $(INCLUDE_DIR)/package.mk
+
 define Package/gluon-polygon-matcher
 	SECTION:=gluon
 	CATEGORY:=Gluon
