- Makefile nochmal angepasst, hoffentlich geht es jetzt endlich

--- a/gluon-polygon-matcher/Makefile
+++ b/gluon-polygon-matcher/Makefile
@@ -1,3 +1,5 @@
+include $(TOPDIR)/rules.mk
+
 PKG_NAME:=gluon-polygon-matcher
 PKG_VERSION:=0.0.1
 
@@ -6,14 +8,18 @@ PKG_BUILD_DIR := $(BUILD_DIR)/$(PKG_NAME)
 include $(INCLUDE_DIR)/package.mk
 
 define Package/gluon-polygon-matcher
-	SECTION:=gluon
-	CATEGORY:=Gluon
-	TITLE:=Polygon Matcher
-	DEPENDS:=+gluon-core
+  SECTION:=gluon
+  CATEGORY:=Freifunk Muenster
+  TITLE:=Polygon Matcher
+  DEPENDS:=+gluon-core
+endef
+
+define Package/$(PKG_NAME)/description
+  Selects the domain based on provided polygons in the geojson format.
 endef
 
 define Build/Prepare
-	mkdir -p $(PKG_BUILD_DIR)
+  mkdir -p $(PKG_BUILD_DIR)
 endef
 
 define Build/Configure
@@ -22,8 +28,8 @@ endef
 define Build/Compile
 endef
 
-define Package/gluon-polygon-matcher/install
-	$(CP) ./files/* $(1)/
+define Package/$(PKG_NAME)/install
+  $(CP) ./files/* $(1)/
 endef
 
-$(eval $(call BuildPackage,gluon-polygon-matcher))
+$(eval $(call BuildPackage,$(PKG_NAME)))
